🌈Add kickass new dark mode, fix responsiveness (#3)
* 🌈 Add kickass new dark mode, fix responsiveness

* 🐞 Remember to start it in light mode

* 🌌 Add stars to dark sky

--- a/src/components/MeOnALion.css
+++ b/src/components/MeOnALion.css
@@ -5,7 +5,7 @@
   bottom: 0;
 }
 
-@media all and (max-width: 480px) {
+/* @media all and (max-width: 480px) {
   .MeOnALionSVG {
     height: 100vw;
     left: -10%;
@@ -17,9 +17,9 @@
     height: 100vw;
     left: -10%;
   }
-}
+} */
 
-@media (max-aspect-ratio: 1/1) {
+/* @media (max-aspect-ratio: 1/1) {
   .MeOnALionSVG {
     height: 70vh;
     left: 0%;
@@ -31,12 +31,43 @@
     height: 97vh;
     left: -10%;
   }
+} */
+
+#MeSVG {
+  height: 100%;
 }
 
 .MeOnALionBackground {
   position: relative;
   overflow: hidden;
   height: 97vh;
-  background-image: linear-gradient(to bottom, #3e69a0 30%, #7ea0cd);
   box-shadow: 0 0 20px 7px #999;
+}
+.MeOnALionBackground .darkBackgroundFiller {
+  transition: all 2s ease-in 0s;
+}
+
+.backgroundFiller {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to bottom, #3e69a0 30%, #7ea0cd);
+  opacity: 1;
+}
+
+.darkBackgroundFiller {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to bottom, #000 30%, #4aff32);
+  opacity: 0;
+}
+
+.darkBackgroundFiller.dark {
+  opacity: 1;
+}
+
+.MeOnALionBackground * {
+  transition: fill 2s ease-in-out 0s,
+              stroke 2s ease-in-out 0s,
 }
