--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -35,15 +35,15 @@
 
 @media (max-aspect-ratio: 1/1) {
   .theTops {
-    padding-top: 3vh;
+    padding-top: 7vh;
   }
   .nameHeader {
-    font-size: 4em;
+    font-size: 15vw;
   }
   .subtitle {
     margin-left: 20%;
     margin-top: 0;
-    font-size: 1em;
+    font-size: 6vw;
   }
 }
 
